<resources>
    <string name="app_name">MyLittlePoem</string>
    <string name="app_slogan">我的小诗，照亮字的美</string>
    <string name="zhuan">撰</string>
    <string name="setting">设</string>
    <string name="read">阅</string>
    <string name="do_you_want_to_delete_diary">确定删除？</string>
    <string name="yes">确定</string>
    <string name="no">取消</string>
    <string name="save">存</string>
    <string name="edit_content_no_null">抱歉，内容不能为空!</string>
    <string name="input_title_hint">标题不用太长</string>
    <string name="input_content_hint">内容不能为空空空</string>
    <string name="want_to_save">是否保存修改？</string>
    <string name="edit">辑</string>
    <string name="share">享</string>
    <string name="space_of_date_record_end">"  "</string>
    <string name="record">记</string>
</resources>
