<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.awds.mylittlepoem.view.SplashActivity">

    <LinearLayout
        android:orientation="vertical"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:text="@string/app_name"
            android:textSize="28sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/app_slogan"
            android:textSize="18sp"
            android:gravity="center"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.awds.mylittlepoem.view.widget.TextPointView
            app:text="@string/zhuan"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</FrameLayout>
