<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.awds.mylittlepoem.view.EditActivity">
    <EditText
        android:id="@+id/edit_title"
        android:layout_marginTop="@dimen/margin_18"
        android:maxLines="1"
        android:hint="@string/input_title_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
    <ScrollView
        android:id="@+id/edit_scroll_view"
        android:layout_below="@id/edit_title"
        android:layout_marginTop="@dimen/margin_18"
        android:scrollbars="none"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <EditText
            android:id="@+id/edit_content"
            android:gravity="top"
            android:hint="@string/input_content_hint"
            android:paddingBottom="@dimen/margin_40"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </ScrollView>
    <FrameLayout
        android:background="@android:color/transparent"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/margin_18"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.awds.mylittlepoem.view.widget.TextPointView
            android:id="@+id/edit_save"
            app:text="@string/save"
            android:layout_gravity="center_horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </FrameLayout>
</RelativeLayout>
