<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.awds.mylittlepoem.view.MainActivity">

    <FrameLayout
        android:background="#aaffffff"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/background_image"
            android:scaleType="centerCrop"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
        <!--<view-->
            <!--android:background="#aaffffff"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="match_parent"/>-->
    </FrameLayout>

    <RelativeLayout
        android:id="@+id/layout_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_marginBottom="24dp"
            android:layout_marginLeft="8dp"
            android:layout_width="@dimen/contain_red_circle_size"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true">

            <com.awds.mylittlepoem.view.widget.TextPointView
                android:id="@+id/setting"
                app:text="@string/setting"
                android:layout_marginBottom="@dimen/margin_18"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tool_bar"
            android:layout_width="@dimen/contain_red_circle_size"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true">

            <ScrollView
                android:id="@+id/right_top_bar"
                android:scrollbars="none"
                android:layout_width="@dimen/contain_red_circle_size"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_marginTop="24dp"
                    android:layout_marginRight="8dp"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.awds.mylittlepoem.view.widget.VerticalTextView
                        android:id="@+id/year"
                        tools:text="二零一六年"
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <com.awds.mylittlepoem.view.widget.VerticalTextView
                        android:id="@+id/month"
                        tools:text="十二月"
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <com.awds.mylittlepoem.view.widget.VerticalTextView
                        android:id="@+id/day"
                        tools:text="十三日"
                        android:gravity="center_horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <com.awds.mylittlepoem.view.widget.TextPointView
                        android:id="@+id/write"
                        app:text="@string/zhuan"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                    <com.awds.mylittlepoem.view.widget.TextPointView
                        android:id="@+id/read"
                        app:text="@string/read"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="@dimen/margin_18"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
            </ScrollView>
        </RelativeLayout>
        <ImageView
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/contain_red_circle_size"
            android:layout_marginRight="@dimen/contain_red_circle_size_x2"
            android:src="@drawable/little_poem_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>

</RelativeLayout>
